test/end-to-end/compile-errors/fun-pointer-not-found.crow
main void()
	x void function() = &foo
	x[]
